fixed text-align on homepage resume intro

--- a/css/main.scss
+++ b/css/main.scss
@@ -270,7 +270,7 @@ header.nav-bar {
         line-height: 1.3rem;
         margin: 0;
         padding: 0;
-
+        text-align: left;
         &.name {
           font-weight: 700;
         }
